fix(indicators): Update indicator layout and functionality
Update the indicator layout and functionality to be responsive without media queries. Remove extra spacer at the top of the content block.

--- a/src/app/launcher/launcher.component.less
+++ b/src/app/launcher/launcher.component.less
@@ -38,9 +38,6 @@ body {
       @media screen and (max-width: 1024px) {
         margin-left: 0;
       }
-      &--spacer {
-        min-height: 50px;
-      }
       &--start {
         margin-top: 0;
         h1 {
